Phase 2 [SymbolTable & Pass #1 Analysis]/AtalkParser.java
// Generated from Atalk.g4 by ANTLR 4.7

	import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AtalkParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, CONST_NUM=38, 
		CONST_CHAR=39, CONST_STR=40, NL=41, ID=42, COMMENT=43, WS=44;
	public static final int
		RULE_program = 0, RULE_actor = 1, RULE_state = 2, RULE_receiver = 3, RULE_type = 4, 
		RULE_block = 5, RULE_statements = 6, RULE_statement = 7, RULE_stm_vardef = 8, 
		RULE_stm_tell = 9, RULE_stm_write = 10, RULE_stm_if_elseif_else = 11, 
		RULE_stm_foreach = 12, RULE_stm_quit = 13, RULE_stm_break = 14, RULE_stm_assignment = 15, 
		RULE_expr = 16, RULE_expr_assign = 17, RULE_expr_or = 18, RULE_expr_or_tmp = 19, 
		RULE_expr_and = 20, RULE_expr_and_tmp = 21, RULE_expr_eq = 22, RULE_expr_eq_tmp = 23, 
		RULE_expr_cmp = 24, RULE_expr_cmp_tmp = 25, RULE_expr_add = 26, RULE_expr_add_tmp = 27, 
		RULE_expr_mult = 28, RULE_expr_mult_tmp = 29, RULE_expr_un = 30, RULE_expr_mem = 31, 
		RULE_expr_mem_tmp = 32, RULE_expr_other = 33;
	public static final String[] ruleNames = {
		"program", "actor", "state", "receiver", "type", "block", "statements", 
		"statement", "stm_vardef", "stm_tell", "stm_write", "stm_if_elseif_else", 
		"stm_foreach", "stm_quit", "stm_break", "stm_assignment", "expr", "expr_assign", 
		"expr_or", "expr_or_tmp", "expr_and", "expr_and_tmp", "expr_eq", "expr_eq_tmp", 
		"expr_cmp", "expr_cmp_tmp", "expr_add", "expr_add_tmp", "expr_mult", "expr_mult_tmp", 
		"expr_un", "expr_mem", "expr_mem_tmp", "expr_other"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'actor'", "'<'", "'>'", "'end'", "','", "'receiver'", "'('", "')'", 
		"'char'", "'['", "']'", "'int'", "'begin'", "'='", "'sender'", "'self'", 
		"'<<'", "'write'", "'if'", "'elseif'", "'else'", "'foreach'", "'in'", 
		"'quit'", "'break'", "'or'", "'and'", "'=='", "'<>'", "'+'", "'-'", "'*'", 
		"'/'", "'not'", "'{'", "'}'", "'read'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "CONST_NUM", "CONST_CHAR", "CONST_STR", "NL", "ID", "COMMENT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Atalk.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		int actorCnt = 0;
		int IsInFor = 0;
		int IsThereErr = 0;
		String PrintOut = "";
	    ArrayList Dim = new ArrayList();
	    ArrayList args = new ArrayList();
	    void print(String str){
	        System.out.println(str);
	    }

	    void putLocalVar(String name, Type type) throws ItemAlreadyExistsException {
	        PrintOut += "var name: " + name + " var type: " + type.toString() + " offset: " + Integer.toString(SymbolTable.top.getOffset(Register.SP)) + " var size: " + Integer.toString(type.size()) + "\n";
	        SymbolTable.top.put(
	            new SymbolTableLocalVariableItem(
	                new Variable(name, type),
	                SymbolTable.top.getOffset(Register.SP)
	            )
	        );
	    }

	    void addActor(String name) throws ItemAlreadyExistsException {
	    	SymbolTable.top.put( new ActorType(name) );
	    }

	    void addReceiver(String name,ArrayList args) throws ItemAlreadyExistsException {
	   		SymbolTable.top.getPreSymbolTable().put( new ReceiveType(name,args) );			
	    }
	    
	    void addLocalVar(String name,Type type,int line){
	    	try {
	            putLocalVar(name, type);

	        }
	        catch(ItemAlreadyExistsException e) {
	        	print(String.format("[Line #%s] Variable \"%s\" already exists.", line, name));
	        	IsThereErr = 1;

	        	String s = name + "_Temporary_";
		        	int cnt = 1;
		        	while(true){
		        		try{
		        			putLocalVar(s + Integer.toString(cnt), type);
		        		}
		        		catch(ItemAlreadyExistsException exp){
		        			cnt++;
		        			continue;
		        		}
		        		break;
		        	}
	        }
	    }

	    void beginScope() {
	    	int offset = 0;
	    	if(SymbolTable.top != null){
	        	offset = SymbolTable.top.getOffset(Register.SP);
	    	}
	        SymbolTable.push(new SymbolTable(SymbolTable.top));
	        SymbolTable.top.setOffset(Register.SP, offset);
	       
	    }
	    
	    void endScope() {
	        print("Stack offset: " + SymbolTable.top.getOffset(Register.SP));
	        //print(Integer.toString(IsThereErr));
	        SymbolTable.pop();
	    }

	public AtalkParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<ActorContext> actor() {
			return getRuleContexts(ActorContext.class);
		}
		public ActorContext actor(int i) {
			return getRuleContext(ActorContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(AtalkParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(AtalkParser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			beginScope();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==NL) {
				{
				setState(71);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(69);
					actor();
					}
					break;
				case NL:
					{
					setState(70);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
				
					if(actorCnt == 0){
						print("No actor<> exists");
						IsThereErr = 1;
					}
					endScope();   
					if(IsThereErr == 0){
						print(PrintOut);
					}
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorContext extends ParserRuleContext {
		public Token act_id;
		public Token num;
		public List<TerminalNode> NL() { return getTokens(AtalkParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(AtalkParser.NL, i);
		}
		public TerminalNode ID() { return getToken(AtalkParser.ID, 0); }
		public TerminalNode CONST_NUM() { return getToken(AtalkParser.CONST_NUM, 0); }
		public TerminalNode EOF() { return getToken(AtalkParser.EOF, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public List<ReceiverContext> receiver() {
			return getRuleContexts(ReceiverContext.class);
		}
		public ReceiverContext receiver(int i) {
			return getRuleContext(ReceiverContext.class,i);
		}
		public ActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitActor(this);
		}
	}

	public final ActorContext actor() throws RecognitionException {
		ActorContext _localctx = new ActorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__0);
			setState(79);
			((ActorContext)_localctx).act_id = match(ID);
			setState(80);
			match(T__1);
			setState(81);
			((ActorContext)_localctx).num = match(CONST_NUM);
			setState(82);
			match(T__2);
			setState(83);
			match(NL);
			 
						PrintOut += "actor name: " + (((ActorContext)_localctx).act_id!=null?((ActorContext)_localctx).act_id.getText():null) + " queue length: " + (((ActorContext)_localctx).num!=null?((ActorContext)_localctx).num.getText():null) + "\n";
						actorCnt++;
						if(Integer.parseInt((((ActorContext)_localctx).num!=null?((ActorContext)_localctx).num.getText():null)) <= 0){
							print(String.format("[Line #%d] Actor mailbox size must be more than 0", ((ActorContext)_localctx).num.getLine() )); 
							IsThereErr = 1;
						}

						try {
			            	addActor((((ActorContext)_localctx).act_id!=null?((ActorContext)_localctx).act_id.getText():null));
				        }
				        catch(ItemAlreadyExistsException e) {
				        	print(String.format("[Line #%s] Actor \"%s\" already exists.", ((ActorContext)_localctx).act_id.getLine(), (((ActorContext)_localctx).act_id!=null?((ActorContext)_localctx).act_id.getText():null)));
				        	IsThereErr = 1;

				        	String s = (((ActorContext)_localctx).act_id!=null?((ActorContext)_localctx).act_id.getText():null) + "_Temporary_";
				        	int cnt = 1;
				        	while(true){
				        		try{
				        			addActor(s + Integer.toString(cnt));
				        		}
				        		catch(ItemAlreadyExistsException exp){
				        			cnt++;
				        			continue;
				        		}
				        		break;
				        	}
				        }
					
			 beginScope(); 
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__11) | (1L << NL))) != 0)) {
				{
				setState(89);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__8:
				case T__11:
					{
					setState(86);
					state();
					}
					break;
				case T__5:
					{
					setState(87);
					receiver();
					}
					break;
				case NL:
					{
					setState(88);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(T__3);
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			 endScope(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public TypeContext var_type;
		public Token var_id;
		public TerminalNode NL() { return getToken(AtalkParser.NL, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(AtalkParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AtalkParser.ID, i);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitState(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((StateContext)_localctx).var_type = type();
			setState(99);
			((StateContext)_localctx).var_id = match(ID);
			 addLocalVar( (((StateContext)_localctx).var_id!=null?((StateContext)_localctx).var_id.getText():null),((StateContext)_localctx).var_type.return_type,((StateContext)_localctx).var_id.getLine() ); 
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(101);
				match(T__4);
				setState(102);
				((StateContext)_localctx).var_id = match(ID);
				 addLocalVar( (((StateContext)_localctx).var_id!=null?((StateContext)_localctx).var_id.getText():null),((StateContext)_localctx).var_type.return_type,((StateContext)_localctx).var_id.getLine() ); 
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReceiverContext extends ParserRuleContext {
		public Token recv_id;
		public TypeContext var_type;
		public Token var_id;
		public List<TerminalNode> NL() { return getTokens(AtalkParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(AtalkParser.NL, i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(AtalkParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AtalkParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public ReceiverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_receiver; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterReceiver(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitReceiver(this);
		}
	}

	public final ReceiverContext receiver() throws RecognitionException {
		ReceiverContext _localctx = new ReceiverContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_receiver);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 beginScope(); 
			 args.clear(); 
			setState(113);
			match(T__5);
			setState(114);
			((ReceiverContext)_localctx).recv_id = match(ID);
			setState(115);
			match(T__6);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8 || _la==T__11) {
				{
				setState(116);
				((ReceiverContext)_localctx).var_type = type();
				setState(117);
				((ReceiverContext)_localctx).var_id = match(ID);
				 args.add((((ReceiverContext)_localctx).var_type!=null?_input.getText(((ReceiverContext)_localctx).var_type.start,((ReceiverContext)_localctx).var_type.stop):null)); addLocalVar( (((ReceiverContext)_localctx).var_id!=null?((ReceiverContext)_localctx).var_id.getText():null),((ReceiverContext)_localctx).var_type.return_type,((ReceiverContext)_localctx).var_id.getLine() ); 
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(119);
					match(T__4);
					setState(120);
					((ReceiverContext)_localctx).var_type = type();
					setState(121);
					((ReceiverContext)_localctx).var_id = match(ID);
					 args.add((((ReceiverContext)_localctx).var_type!=null?_input.getText(((ReceiverContext)_localctx).var_type.start,((ReceiverContext)_localctx).var_type.stop):null)); addLocalVar( (((ReceiverContext)_localctx).var_id!=null?((ReceiverContext)_localctx).var_id.getText():null),((ReceiverContext)_localctx).var_type.return_type,((ReceiverContext)_localctx).var_id.getLine() ); 
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(131);
			match(T__7);
			setState(132);
			match(NL);
			 
						try {
			            	addReceiver((((ReceiverContext)_localctx).recv_id!=null?((ReceiverContext)_localctx).recv_id.getText():null),args);
			            	PrintOut += "Receiver signature: " + new ReceiveType((((ReceiverContext)_localctx).recv_id!=null?((ReceiverContext)_localctx).recv_id.getText():null), args).getKey() + "\n";
				        }
				        catch(ItemAlreadyExistsException e) {
				        	print(String.format("[Line #%s] Receiver \"%s\" already exists.", ((ReceiverContext)_localctx).recv_id.getLine(), (((ReceiverContext)_localctx).recv_id!=null?((ReceiverContext)_localctx).recv_id.getText():null)));
				        	IsThereErr = 1;

				        	String s = (((ReceiverContext)_localctx).recv_id!=null?((ReceiverContext)_localctx).recv_id.getText():null) + "_Temporary_";
				        	int cnt = 1;
				        	while(true){
				        		try{
				        			addReceiver(s + Integer.toString(cnt), args);
				        		}
				        		catch(ItemAlreadyExistsException exp){
				        			cnt++;
				        			continue;
				        		}
				        		break;
				        	}
				        }
					
			setState(134);
			statements();
			setState(135);
			match(T__3);
			setState(136);
			match(NL);
			 endScope(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type return_type;
		public Token tmp;
		public List<TerminalNode> CONST_NUM() { return getTokens(AtalkParser.CONST_NUM); }
		public TerminalNode CONST_NUM(int i) {
			return getToken(AtalkParser.CONST_NUM, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(T__8);
				 Dim.clear(); 
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__9) {
					{
					{
					setState(141);
					match(T__9);
					setState(142);
					((TypeContext)_localctx).tmp = match(CONST_NUM);
					setState(143);
					match(T__10);
					 

								Dim.add( (((TypeContext)_localctx).tmp!=null?((TypeContext)_localctx).tmp.getText():null) ); 
								if(Integer.parseInt((((TypeContext)_localctx).tmp!=null?((TypeContext)_localctx).tmp.getText():null)) <= 0) {
									print(String.format("[Line #%d] Array size must be more than 0", ((TypeContext)_localctx).tmp.getLine() )); 
									IsThereErr = 1;
								}

								
					}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 
							
							if(Dim.size() == 0)
								((TypeContext)_localctx).return_type =  CharType.getInstance();  
							else
								((TypeContext)_localctx).return_type =  ArrType.getInstance(CharType.getInstance(), Dim);
						
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				match(T__11);
				 Dim.clear(); 
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__9) {
					{
					{
					setState(153);
					match(T__9);
					setState(154);
					((TypeContext)_localctx).tmp = match(CONST_NUM);
					setState(155);
					match(T__10);
					 
								Dim.add( (((TypeContext)_localctx).tmp!=null?((TypeContext)_localctx).tmp.getText():null) ); 
								if(Integer.parseInt((((TypeContext)_localctx).tmp!=null?((TypeContext)_localctx).tmp.getText():null)) <= 0) {
									print(String.format("[Line #%d] Array size must be more than 0", ((TypeContext)_localctx).tmp.getLine() )); 
									IsThereErr = 1;
								}
									
					}
					}
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 
							if(Dim.size() == 0)
								((TypeContext)_localctx).return_type =  IntType.getInstance();  
							else
								((TypeContext)_localctx).return_type =  ArrType.getInstance(IntType.getInstance(), Dim);
						
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(AtalkParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(AtalkParser.NL, i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 beginScope();
			setState(166);
			match(T__12);
			setState(167);
			match(NL);
			setState(168);
			statements();
			setState(169);
			match(T__3);
			setState(170);
			match(NL);
			 endScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(AtalkParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(AtalkParser.NL, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << T__30) | (1L << T__33) | (1L << T__34) | (1L << T__36) | (1L << CONST_NUM) | (1L << CONST_CHAR) | (1L << CONST_STR) | (1L << NL) | (1L << ID))) != 0)) {
				{
				setState(175);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__6:
				case T__8:
				case T__11:
				case T__12:
				case T__14:
				case T__15:
				case T__17:
				case T__18:
				case T__21:
				case T__23:
				case T__24:
				case T__30:
				case T__33:
				case T__34:
				case T__36:
				case CONST_NUM:
				case CONST_CHAR:
				case CONST_STR:
				case ID:
					{
					setState(173);
					statement();
					}
					break;
				case NL:
					{
					setState(174);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Stm_vardefContext stm_vardef() {
			return getRuleContext(Stm_vardefContext.class,0);
		}
		public Stm_assignmentContext stm_assignment() {
			return getRuleContext(Stm_assignmentContext.class,0);
		}
		public Stm_foreachContext stm_foreach() {
			return getRuleContext(Stm_foreachContext.class,0);
		}
		public Stm_if_elseif_elseContext stm_if_elseif_else() {
			return getRuleContext(Stm_if_elseif_elseContext.class,0);
		}
		public Stm_quitContext stm_quit() {
			return getRuleContext(Stm_quitContext.class,0);
		}
		public Stm_breakContext stm_break() {
			return getRuleContext(Stm_breakContext.class,0);
		}
		public Stm_tellContext stm_tell() {
			return getRuleContext(Stm_tellContext.class,0);
		}
		public Stm_writeContext stm_write() {
			return getRuleContext(Stm_writeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtalkListener ) ((AtalkListener)listener).exitStatement(this);
		}
	}
